--- a/source/IPPBX Status/ippbxstatus.conf
+++ b/source/IPPBX Status/ippbxstatus.conf
@@ -1,8 +1,8 @@
 #Ultratone IPPBX
-#Mon Feb 28 16:36:01 MYT 2011
-extpass=[C@56a499
+#Mon Feb 28 18:15:32 MYT 2011
+extpass=
 user=admin
-password=[C@21b6d
+password=ultratone
 ext=
 server=10.1.2.47
 enableLogin=true
