tambah fungsi trayIcon

--- a/source/IPPBX Status/ippbxstatus.conf
+++ b/source/IPPBX Status/ippbxstatus.conf
@@ -1,8 +1,8 @@
 #Ultratone IPPBX
-#Mon Feb 28 18:15:32 MYT 2011
-extpass=
+#Tue Mar 01 14:06:46 SGT 2011
+extpass=99887766
 user=admin
 password=ultratone
-ext=
+ext=9004
 server=10.1.2.47
 enableLogin=true
