--- a/source/IPPBX Status/nbproject/project.properties
+++ b/source/IPPBX Status/nbproject/project.properties
@@ -2,8 +2,10 @@ annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.desc=Ultratone IPPBX Status
+application.homepage=http://www.persiasys.com
 application.title=IPPBX Status
-application.vendor=apogee
+application.vendor=PersiaSYS Sdn. Bhd.
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -27,7 +29,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -54,6 +58,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=defaut
+jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=ippbxstatus.IPPBXStatus
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
