tambah http request

--- a/source/IPPBX Status/ippbxstatus.conf
+++ b/source/IPPBX Status/ippbxstatus.conf
@@ -1,8 +1,8 @@
 #Ultratone IPPBX
-#Tue Mar 01 14:06:46 SGT 2011
+#Wed Mar 02 17:07:13 MYT 2011
 extpass=99887766
 user=admin
 password=ultratone
 ext=9004
-server=10.1.2.47
+server=10.1.1.47
 enableLogin=true
